--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,4 @@
 @import 'https://fonts.googleapis.com/css?family=Fira+Sans';
-@import url(https://fonts.googleapis.com/css?family=Indie+Flower);
 @import url("https://fonts.googleapis.com/css?family=Courgette");
 .main-window {
   width: 400px;
@@ -7,8 +6,8 @@
   background: rgba(255, 255, 255, 0.8);
   -webkit-border-radius: 10px;
           border-radius: 10px;
-  -webkit-box-shadow: inset -1px 1px 10px rgba(0, 0, 0, 0.2), inset 1px -1px 10px rgba(0, 0, 0, 0.2), 1px 10px 5px rgba(0, 0, 0, 0.4), 4px 3px 8px rgba(0, 0, 0, 0.4), 5px 10px 10px rgba(0, 0, 0, 0.2), -5px 10px 10px rgba(0, 0, 0, 0.4);
-          box-shadow: inset -1px 1px 10px rgba(0, 0, 0, 0.2), inset 1px -1px 10px rgba(0, 0, 0, 0.2), 1px 10px 5px rgba(0, 0, 0, 0.4), 4px 3px 8px rgba(0, 0, 0, 0.4), 5px 10px 10px rgba(0, 0, 0, 0.2), -5px 10px 10px rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: inset -1px 1px 10px rgba(0, 0, 0, 0.5), inset 1px -1px 10px rgba(0, 0, 0, 0.5), 1px 10px 5px rgba(0, 0, 0, 0.5), 4px 3px 8px rgba(0, 0, 0, 0.5), 5px 10px 10px rgba(0, 0, 0, 0.2), -5px 10px 10px rgba(0, 0, 0, 0.4);
+          box-shadow: inset -1px 1px 10px rgba(0, 0, 0, 0.5), inset 1px -1px 10px rgba(0, 0, 0, 0.5), 1px 10px 5px rgba(0, 0, 0, 0.5), 4px 3px 8px rgba(0, 0, 0, 0.5), 5px 10px 10px rgba(0, 0, 0, 0.2), -5px 10px 10px rgba(0, 0, 0, 0.4);
   padding: 40px 0 0;
   position: relative; }
   .main-window .header {
@@ -25,7 +24,7 @@
       float: left;
       font-size: 0.85em; }
     .main-window .header .resetAll {
-      margin: 12px 20px;
+      margin: 19px 25px;
       float: right;
       font-size: 1em;
       -webkit-border-radius: 10px;
@@ -34,16 +33,95 @@
       background: none;
       border: 2px dashed transparent; }
       .main-window .header .resetAll:hover {
-        border: 2px dashed grey; }
-      .main-window .header .resetAll:focus {
-        outline: none; }
-  .main-window .board-container {
-    width: 350px;
-    height: 350px;
-    background: rgba(0, 0, 0, 0.5);
-    margin: auto;
-    background: rgba(0, 0, 0, 0.1) -webkit-radial-gradient(center, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9));
-    background: rgba(0, 0, 0, 0.1) radial-gradient(center, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9)); }
+        color: #b60021; }
+
+.board-container {
+  width: 350px;
+  height: 350px;
+  margin-left: 25px;
+  position: absolute;
+  color: white;
+  font-family: Courgette;
+  font-weight: bold; }
+
+.game-options, .symbol-select, #canvas {
+  width: 350px;
+  height: 350px;
+  position: absolute; }
+
+.board-container {
+  background: rgba(0, 0, 0, 0.1) -webkit-radial-gradient(center, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9));
+  background: rgba(0, 0, 0, 0.1) radial-gradient(center, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9));
+  z-index: 9; }
+
+.game-options, .symbol-select {
+  color: white;
+  z-index: 10; }
+  .game-options .prompt, .symbol-select .prompt {
+    text-align: center;
+    margin: 100px 25px;
+    font-size: 1.4em; }
+  .game-options .options, .symbol-select .options {
+    display: inline-block;
+    font-size: 1em;
+    margin: auto; }
+    .game-options .options .single-player, .game-options .options .two-player, .game-options .options .symbol-x, .game-options .options .symbol-O, .symbol-select .options .single-player, .symbol-select .options .two-player, .symbol-select .options .symbol-x, .symbol-select .options .symbol-O {
+      cursor: pointer; }
+      .game-options .options .single-player:hover, .game-options .options .two-player:hover, .game-options .options .symbol-x:hover, .game-options .options .symbol-O:hover, .symbol-select .options .single-player:hover, .symbol-select .options .two-player:hover, .symbol-select .options .symbol-x:hover, .symbol-select .options .symbol-O:hover {
+        color: #05d2ff; }
+    .game-options .options .single-player, .symbol-select .options .single-player {
+      float: left;
+      margin-left: 60px; }
+    .game-options .options .two-player, .symbol-select .options .two-player {
+      float: right;
+      margin-left: 50px; }
+    .game-options .options .symbol-x, .symbol-select .options .symbol-x {
+      float: left;
+      margin-left: 125px; }
+    .game-options .options .symbol-O, .symbol-select .options .symbol-O {
+      float: right;
+      margin-left: 50px; }
+  .game-options .go-back, .symbol-select .go-back {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 30px;
+    height: 30px;
+    -webkit-border-radius: 50%;
+            border-radius: 50%;
+    cursor: pointer;
+    margin-left: 30px;
+    border: 2px solid transparent; }
+    .game-options .go-back:hover, .symbol-select .go-back:hover {
+      border: 2px solid white; }
+      .game-options .go-back:hover .tri, .symbol-select .go-back:hover .tri {
+        border-right: 10px solid #05d2ff; }
+    .game-options .go-back .tri, .symbol-select .go-back .tri {
+      margin-right: 5px;
+      border-top: 10px solid transparent;
+      border-bottom: 10px solid transparent;
+      border-right: 10px solid white; }
+
+.game-options {
+  display: none; }
+
+.symbol-select {
+  display: none;
+  z-index: 2; }
+  .symbol-select .symbol-x, .symbol-select .symbol-O {
+    font-size: 2.5em; }
+
+#canvas {
+  z-index: 99; }
 
 .player-2 {
   display: none; }
@@ -53,7 +131,7 @@ body {
   padding: 0;
   height: 100%;
   width: 100%;
-  background-image: url(../images/maxresdefault.jpg);
+  background-image: url(../images/bg-02.jpg);
   background-repeat: no-repeat;
   background-size: cover; }
 
