--- a/_pugfiles/main.pug
+++ b/_pugfiles/main.pug
@@ -9,5 +9,18 @@
     .computer
       .score 0
       .player Computer
-    button.resetAll Reset
+    .resetAll Reset
   .board-container
+    .game-options
+      p.prompt How would you like to play?
+      .options
+        p.single-player Single Player
+        p.two-player Two Players
+    .symbol-select
+      p.prompt Would you like to be X or O?
+      .options
+        .symbol-x X
+        .symbol-O O
+      .go-back
+        .tri
+    canvas#canvas
