--- a/assets/css/styles/_master.sass
+++ b/assets/css/styles/_master.sass
@@ -1,4 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Indie+Flower)
 @import url('https://fonts.googleapis.com/css?family=Courgette')
 body
   margin: 0
@@ -6,7 +5,7 @@ body
   height: 100%
   width: 100%
   background:
-    image: url(../images/maxresdefault.jpg)
+    image: url(../images/bg-02.jpg)
     repeat: no-repeat
     size: cover
 p
