--- a/assets/css/styles/_style.sass
+++ b/assets/css/styles/_style.sass
@@ -50,12 +50,12 @@
 
 .board-container
   background: rgba(0,0,0,0.1) radial-gradient(center, rgba(0,0,0,0.6), rgba(0,0,0,0.9))
-  z-index: 9
+  //z-index: 9
 
 .game-options, .symbol-select
   //display: none
   color: white
-  z-index: 10
+  //z-index: 10
   .prompt
     text-align: center
     margin: 100px 25px
@@ -105,15 +105,36 @@
 
 
 .game-options
-  display: none
+  //display: none
 .symbol-select
-  display: none
-  z-index: 2
+  //display: none
+  //z-index: 2
   .symbol-x, .symbol-O
     font-size: 2.5em
 #canvas
   //display: none
-  z-index: 99
+  //z-index: 999
+.boxes
+  display: inline-block
+  position: absolute
+  padding: 0
+  margin: 12px 12px
+  width: 95%
+  height: 95%
+  //background-color: yellow
+  //z-index: 1000
+  .box
+    display: inline-block
+    list-style: none
+    padding: 0
+    margin: 0 5px 3px 2px
+    width: 31%
+    height: 31%
+    //background-color: pink
+    cursor: pointer
+
+
+
 
 .player-2
   display: none
