--- a/assets/css/styles/_style.sass
+++ b/assets/css/styles/_style.sass
@@ -20,7 +20,6 @@
       margin-top: 5px
       float: left
       font-size: 0.85em
-
     .resetAll
       //display: none
       margin: 19px 25px
@@ -33,29 +32,24 @@
       &:hover
         color: rgb(182, 0, 33)
 
-
-
 .board-container
   width: 350px
   height: 350px
   margin-left: 25px
   position: absolute
+  background: rgba(0,0,0,0.1) radial-gradient(center, rgba(0,0,0,0.6), rgba(0,0,0,0.9))
   color: white
   font-family: Courgette
   font-weight: bold
-.game-options, .symbol-select, #canvas
-  width: 350px
-  height: 350px
-  position: absolute
-
-.board-container
-  background: rgba(0,0,0,0.1) radial-gradient(center, rgba(0,0,0,0.6), rgba(0,0,0,0.9))
-  //z-index: 9
+  z-index: 1
+  .game-options, .symbol-select, #canvas
+    width: 350px
+    height: 350px
+    position: absolute
 
 .game-options, .symbol-select
   //display: none
   color: white
-  //z-index: 10
   .prompt
     text-align: center
     margin: 100px 25px
@@ -71,6 +65,8 @@
       &:hover
         color: #05d2ff
       //margin-bottom: 200px
+    .symbol-x, .symbol-O
+      font-size: 2.5em
     .single-player
       float: left
       margin-left: 60px
@@ -84,6 +80,7 @@
       float: right
       margin-left: 50px
   .go-back
+    //display: none
     display: flex
     justify-content: center
     align-items: center
@@ -92,46 +89,59 @@
     border-radius: 50%
     cursor: pointer
     margin-left: 30px
+    position: absolute
     border: 2px solid transparent
-    &:hover
-      border: 2px solid white
-      .tri
-        border-right: 10px solid #05d2ff
     .tri
       margin-right: 5px
       border-top: 10px solid transparent
       border-bottom: 10px solid transparent
       border-right: 10px solid white
-
+    &:hover
+      border: 2px solid white
+      .tri
+        border-right: 10px solid #05d2ff
 
 .game-options
-  //display: none
+  display: none
+  //z-index: 1
 .symbol-select
-  //display: none
+  display: none
   //z-index: 2
-  .symbol-x, .symbol-O
-    font-size: 2.5em
 #canvas
   //display: none
-  //z-index: 999
+  //z-index: 3
 .boxes
-  display: inline-block
-  position: absolute
-  padding: 0
+  display: flex
+  //align-items: center
+  //justify-content: center
+  flex-flow: wrap
+  //align-content: flex-end
+  //padding: 0
   margin: 12px 12px
   width: 95%
   height: 95%
-  //background-color: yellow
-  //z-index: 1000
-  .box
-    display: inline-block
-    list-style: none
-    padding: 0
-    margin: 0 5px 3px 2px
-    width: 31%
-    height: 31%
-    //background-color: pink
-    cursor: pointer
+  position: absolute
+  //z-index: 5
+  @for $i from 1 to 10
+    .box#{$i}
+      //display: inline-block
+      //position: absolute
+      list-style: none
+      text-align: center
+      padding: 0
+      margin: 0 5px 0 2px
+      width: 31%
+      height: 31%
+      //background-color: grey
+      cursor: pointer
+      font-size: 5em
+      font-family: chalkboard
+
+
+
+
+
+
 
 
 
