--- a/_pugfiles/main.pug
+++ b/_pugfiles/main.pug
@@ -1,13 +1,16 @@
+.wrapper
+  .player1Prompt
+  .player2Prompt
 .main-window
   .header
     .player-1
-      .score 0
+      .score-1 0
       .player Player 1
     .player-2
-      .score 0
+      .score-2 0
       .player Player 2
     .computer
-      .score 0
+      .score-2 0
       .player Computer
     .resetAll Reset
   .board-container
@@ -25,3 +28,6 @@
         .tri
     canvas#canvas
     .boxes
+    .win
+    .draw
+    .lose
