--- a/assets/css/styles/_style.sass
+++ b/assets/css/styles/_style.sass
@@ -1,7 +1,32 @@
+.wrapper
+  position: absolute
+  width: 400px
+  height: 390px
+
+  .player1Prompt, .player2Prompt
+    width: 130px
+    height: 40px
+    background-color: rgba(255,255,255,0.1)
+    text-align: center
+    font-size: 1.1em
+    font-family: Courgette
+    padding-top: 10px
+    color: yellow
+  .player1Prompt
+
+    margin-top: -20px
+    margin-left: 10px
+    float: left
+  .player2Prompt
+
+    margin-top: -20px
+    margin-right: 10px
+    float: right
+
 .main-window
   width: 400px
   height: 390px
-  background: rgba(255,255,255,0.8)
+  background: rgba(255,255,255,0.9)
   border-radius: 10px
   box-shadow: inset -1px 1px 10px rgba(0,0,0,0.5), inset 1px -1px 10px rgba(0,0,0,0.5), 1px 10px 5px rgba(0,0,0,0.5), 4px 3px 8px rgba(0,0,0,0.5), 5px 10px 10px rgba(0,0,0,.2), -5px 10px 10px rgba(0,0,0,.4)
   padding: 40px 0 0
@@ -41,7 +66,7 @@
   color: white
   font-family: Courgette
   font-weight: bold
-  z-index: 1
+  //z-index: 10
   .game-options, .symbol-select, #canvas
     width: 350px
     height: 350px
@@ -137,24 +162,17 @@
       font-size: 5em
       font-family: chalkboard
 
-
-
-
-
-
-
-
-
-
 .player-2
-  display: none
-.computer
   //display: none
+.computer
+  display: none
 
 //Animate player move info
-.player-1-move
-.player-2-move
-.computer-move
+
+//Animation
+
+
+
 
 //Messages
 .draw
