--- a/_pugfiles/main.pug
+++ b/_pugfiles/main.pug
@@ -29,5 +29,11 @@
     canvas#canvas
     .boxes
     .win
+      .message
+        p
     .draw
+      .message
+        p
     .lose
+      .message
+        p
