--- a/assets/css/styles/_style.sass
+++ b/assets/css/styles/_style.sass
@@ -159,6 +159,7 @@
       width: 31%
       height: 31%
       //background-color: grey
+      background: rgba(159, 12, 12, 0)
       cursor: pointer
       font-size: 5em
       font-family: chalkboard
@@ -189,3 +190,12 @@
       text-align: center
       margin-top: 130px
       font-size: 2em
+.warning
+  background: rgba(159, 12, 12, 0)
+  //animation: warning  1s linear running 3
+
+@-webkit-key-frames warning
+  0%
+    background: rgba(159, 12, 12, 0)
+  100%
+    background: rgba(159, 12, 12, 1)
